Bug 283507 - Knotes erases its configuration file at launch
Summary: Knotes erases its configuration file at launch
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-07 01:03 UTC by johannesmyth
Modified: 2012-04-15 12:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description johannesmyth 2011-10-07 01:03:09 UTC
Version:           4.7 (using KDE 4.7.1) 
OS:                Linux

Every time I close and reopen Knotes, it erases the configuration file in ~/.kde/share/config/knotesrc.

Reproducible: Always

Steps to Reproduce:
1. Change general settings for background color, width, height, etc.
2. Close Knotes
3. Relaunch it and see your settings gone

Actual Results:  
It wipes my custom settings

Expected Results:  
It should keep my settings

I have already recreated all my settings on ~/.kde due to 4.7 and it didn't help
Comment 1 johannesmyth 2011-10-07 01:06:50 UTC
Oh, sorry, Knotes version is 4.7.1, not 4.7.
Comment 2 Ron Willhoite 2011-10-23 17:51:43 UTC
I'm having this problem also.

Configure knotes, /share/config/knotesrc exists.

Quit knotes, the knotesrc file is still there.

Start knotes, the knotesrc file is gone.

Starting knotes in a terminal shows one of the following lines for each note:

knotes(2325) KNotesLegacy::convertKNotes1Config: The file " "/home/ronw/.kde/share/apps/knotes/notes/libkcal-914103111.560" " lacks version information but is not a valid KNotes 1 config file either!

but no messages about the knotesrc file.

Version is 4.7.2.
Comment 3 Marte 2012-03-05 23:44:34 UTC
same problem here, my versionis 4.7.4, made to starts when ubuntu starts but can't get it to remember configuration, a little help here?
Comment 4 Travis Evans 2012-03-28 00:40:25 UTC
Confirmed on KDE 4.8.0, Arch Linux 64-bit. Symptoms are as described above; any changes in the configuration dialog get lost on every start.
Comment 5 Allen Winter 2012-04-15 12:02:18 UTC
Git commit 092aaf7f1d4ae40df071b68c76f37a78e6e78afd by Allen Winter.
Committed on 15/04/2012 at 13:57.
Pushed by winterz into branch 'master'.

the version value in knotesrc is no longer a floating point number.
so cheat.

this fixes the test that looks to remove ancient knotesrc files.
FIXED-IN: 4.8.3
MERGE: 4.8

M  +41   -41   knotes/knoteslegacy.cpp

http://commits.kde.org/kdepim/092aaf7f1d4ae40df071b68c76f37a78e6e78afd
Comment 6 Allen Winter 2012-04-15 12:02:48 UTC
Git commit c1c7b3cdf2f474db608c4e3498acf477043a4115 by Allen Winter.
Committed on 15/04/2012 at 13:57.
Pushed by winterz into branch 'KDE/4.8'.

the version value in knotesrc is no longer a floating point number.
so cheat.

this fixes the test that looks to remove ancient knotesrc files.
FIXED-IN: 4.8.3
MERGE: 4.8
(cherry picked from commit 092aaf7f1d4ae40df071b68c76f37a78e6e78afd)

M  +41   -41   knotes/knoteslegacy.cpp

http://commits.kde.org/kdepim/c1c7b3cdf2f474db608c4e3498acf477043a4115