the version value in knotesrc is no longer a floating point number. so cheat.

this fixes the test that looks to remove ancient knotesrc files.

BUG: 283507
FIXED-IN: 4.8.3
MERGE: 4.8